Changes for Filter Effects specification
----------------------------------------

2012-08-01  Dirk Schulze  <dschulze@adobe.com>

- more clean-up and link fixes

2012-08-01  Dirk Schulze  <dschulze@adobe.com>

- general clean-up
- fix links

2012-08-01  Dirk Schulze  <dschulze@adobe.com>

- update mix function description. It is independent from a specific shader language now.
- Updated the default shaders for GLSL.

2012-07-27  Dirk Schulze  <dschulze@adobe.com>

- update element summary of filter element after more changes from Cameron on the preprocessor

2012-07-27  Dirk Schulze  <dschulze@adobe.com>

- use preprocessor to create element summary

2012-07-23  Erik Dahlström  <ed@opera.com>

- ACTION-3314: Specify that float values in the 'order' attribute of feConvolveMatrix 
  will truncate the values if they're not integers.

2012-07-20  Dirk Schulze  <dschulze@adobe.com>

- corrections to shader part after review

2012-06-27  Dirk Schulze  <dschulze@adobe.com>

- corrections on mix function

2012-06-27  Dirk Schulze  <dschulze@adobe.com>

- added description of mix function in the processing model
- some tweaks to SVG images

2012-06-27  Dirk Schulze  <dschulze@adobe.com>

- again: use more SVG magic for shaders

2012-06-25  Dirk Schulze  <dschulze@adobe.com>

- use more SVG magic for shaders

2012-06-25  Dirk Schulze  <dschulze@adobe.com>

- added svg stack for shader concept - replaces PNGs

2012-06-25  Dirk Schulze  <dschulze@adobe.com>

- started adding shader processing model
- issue corrections on shader boxes

2012-06-22  Dirk Schulze  <dschulze@adobe.com>

- for now, the filter-margin properties just apply to filter function custom()

2012-06-22  Dirk Schulze  <dschulze@adobe.com>

- added index and property index
- cleanup of property defintions

2012-06-22  Dirk Schulze  <dschulze@adobe.com>

- added defintions for <box>
- cleanup of properties
- cleanup of defintions
- reordering of sections for a better readability
