@@ -1,6 +1,11 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2012-08-06  Dirk Schulze  <dschulze@adobe.com>
+
+- custom primitive operates on non-premultiplied colors
+- general typo fixes
+
 2012-08-01  Dirk Schulze  <dschulze@adobe.com>
 
 - more clean-up and link fixes
